# gqltype

./: .gitignore  README.md  pyproject.toml  tox.ini
examples/showcase/: pyproject.toml  showcase.py
examples/swgql/: app.py  pyproject.toml  storage.py
examples/swgql/app/: README.md  __init__.py  __main__.py  schema_relay.py  schema_simple.py  storage.py
gqltype/: __init__.py  context.py  decorators.py  exceptions.py  schema.py
gqltype/contrib/: graphiql_page.py
gqltype/contrib/aiohttp/: __init__.py  view.py
gqltype/contrib/connection/: __init__.py
gqltype/contrib/starlette/: __init__.py  view.py
gqltype/graphql_types/: __init__.py  date.py  datetime.py  decimal.py  duration.py  nothing.py  time.py  uuid.py
gqltype/transform/: transform_class.py  transform_enum.py  transform_general_type.py  transform_graphql_type.py  transform_list.py  transform_nothing_type.py  transform_type_hint.py  transform_union.py  transformer.py  type_container.py
gqltype/utils/: __init__.py  camel_case.py  cls.py  func.py  resolver.py  types.py
tests/: schema.py  utils.py
tests/integration/: test_annotations.py  test_supported_types.py
tests/units/transform/: test_transform_class.py
