[tool.poetry]
name = "gqltype-examples-showcase"
version = "0.1.0"
description = "Show examples from GraphQL tutorial"
authors = ["miphreal <miphreal@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
starlette = "^0.13.4"
uvicorn = "^0.11.5"
gqltype = {"path" = "../.."}

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
