[tool.poetry]
name = "gqltype-examples-swgql"
version = "0.1.0"
description = "Example StarWars GraphQL server"
authors = ["miphreal <miphreal@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
starlette = "*"
uvicorn = "*"
gqltype = {"path" = "../.."}
aiohttp = "*"

[tool.poetry.dev-dependencies]
ipdb = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
